5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1575_1330.log
== TEST (2019-03-20 22:00:07) 
-- CODE:
print(250 / 6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:00:31) 
-- CODE:
print(250 / 6)
round(41,6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:00:57) 
-- CODE:
print(250 / 6)
round(41,6)
print(round(41,6))
-- OUTPUT:
41.666666666666664
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:01:04) 
-- CODE:
print(250 / 6)
round(41,6)
print(round(41,6))
-- EXECUTION TIME:
0.118357
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:01:26) 
-- CODE:
print(250 / 6)
round(41,666666)
print(round(41,6))
-- OUTPUT:
41.666666666666664
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:01:35) 
-- CODE:
print(250 / 6)
round(41,666666)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:01:37) 
-- CODE:
print(250 / 6)
round(41,666666)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:02:10) 
-- CODE:
print(250 / 6)
print("round(41,6)")
-- OUTPUT:
41.666666666666664
round(41,6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:02:25) 
-- CODE:
print(250 / 6)
print(round(41,6))
-- OUTPUT:
41.666666666666664
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:02:28) 
-- CODE:
print(250 / 6)
print(round(41,6))
-- EXECUTION TIME:
0.148625
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:02:46) 
-- CODE:
print(250 / 6)
round(41,2)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:02:56) 
-- CODE:
print(250 / 6)
round(print)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(print)
TypeError: type builtin_function_or_method doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:03:22) 
-- CODE:
print(250 / 6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:03:46) 
-- CODE:
print(250 / 6)
print(round(41,6))
-- OUTPUT:
41.666666666666664
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:03:49) 
-- CODE:
print(250 / 6)
print(round(41,6))
-- EXECUTION TIME:
0.135426
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:04:34) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:06:33) 
-- CODE:
print(250/6)
round(41.666666666666664)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:06:42) 
-- CODE:
print(250/6)
round(41.6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:06:46) 
-- CODE:
print(250/6)
round(41.6)
-- EXECUTION TIME:
0.11557
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:06:51) 
-- CODE:
print(250/6)
round(41.6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:06:52) 
-- CODE:
print(250/6)
round(41.6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:07:03) 
-- CODE:
print(250/6)
round(41,6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:07:30) 
-- CODE:
print(250/6)
print(round(41.6))
-- OUTPUT:
41.666666666666664
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:07:34) 
-- CODE:
print(250/6)
print(round(41.6))
-- EXECUTION TIME:
0.167646
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:07:42) 
-- CODE:
print(250/6)
print(round(41.6))
-- OUTPUT:
41.666666666666664
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:07:44) 
-- CODE:
print(250/6)
print(round(41.6))
-- OUTPUT:
41.666666666666664
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:07:44) 
-- CODE:
print(250/6)
print(round(41.6))
-- OUTPUT:
41.666666666666664
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:07:49) 
-- CODE:

print(round(41.6))
-- EXECUTION TIME:
0.194865
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:07:51) 
-- CODE:

print(round(41.6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:07:53) 
-- CODE:

print(round(41.6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:08:17) 
-- CODE:
print(250/6)
print(round(41.6))
-- OUTPUT:
41.666666666666664
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:08:29) 
-- CODE:
print(250/6)
round(41.6)
print(round(41.6))
-- OUTPUT:
41.666666666666664
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:08:31) 
-- CODE:
print(250/6)
round(41.6)
print(round(41.6))
-- OUTPUT:
41.666666666666664
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:08:33) 
-- CODE:
print(250/6)
round(41.6)
print(round(41.6))
-- EXECUTION TIME:
0.164061
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:08:56) 
-- CODE:
print(250/6)
round(41.666666666666664)
print(round(41.6))
-- OUTPUT:
41.666666666666664
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:08:58) 
-- CODE:
print(250/6)
round(41.666666666666664)
print(round(41.6))
-- EXECUTION TIME:
0.180885
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:09:04) 
-- CODE:
print(250/6)
round(41.666666666666664)
print(round(41.6))
-- OUTPUT:
41.666666666666664
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:10:22) 
-- CODE:
print(250/6)
round(41.666666666666664)
print(round(41.6))
-- OUTPUT:
41.666666666666664
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:10:26) 
-- CODE:
print(250/6)
round(41.666666666666664)
print(round(41.6))
-- EXECUTION TIME:
0.146903
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:10:43) 
-- CODE:
print(250/6)
round(41.666666666666664)
print(41.6)
-- OUTPUT:
41.666666666666664
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:10:45) 
-- CODE:
print(250/6)
round(41.666666666666664)
print(41.6)
-- OUTPUT:
41.666666666666664
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:10:45) 
-- CODE:
print(250/6)
round(41.666666666666664)
print(41.6)
-- OUTPUT:
41.666666666666664
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:10:45) 
-- CODE:
print(250/6)
round(41.666666666666664)
print(41.6)
-- EXECUTION TIME:
0.18054
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:10:47) 
-- CODE:
print(250/6)
round(41.666666666666664)
print(41.6)
-- OUTPUT:
41.666666666666664
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:10:49) 
-- CODE:
print(250/6)
round(41.666666666666664)
print(41.6)
-- OUTPUT:
41.666666666666664
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:10:51) 
-- CODE:
print(250/6)
round(41.666666666666664)
print(41.6)
-- EXECUTION TIME:
0.153016
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:11:04) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(41.6)
-- OUTPUT:
41.666666666666664
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:11:09) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(41.6)
-- EXECUTION TIME:
0.129814
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:12:59) 
-- CODE:
print(250/6)

-- EXECUTION TIME:
0.156725
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:13:01) 
-- CODE:
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:13:01) 
-- CODE:
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:13:01) 
-- CODE:
print(250/6)

-- EXECUTION TIME:
0.104491
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:13:01) 
-- CODE:
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:13:01) 
-- CODE:
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:13:01) 
-- CODE:
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:13:03) 
-- CODE:
print(250/6)

-- EXECUTION TIME:
0.112541
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:21:44) 
-- CODE:
print(250/6)
round()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round()
TypeError: Required argument 'number' (pos 1) not found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:21:51) 
-- CODE:
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:24:46) 
-- CODE:
print(250/6)
print(round(41,6))
-- OUTPUT:
41.666666666666664
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:25:03) 
-- CODE:
print(250/6)
print(round(41,666666666666664))
-- OUTPUT:
41.666666666666664
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:25:08) 
-- CODE:
print(250/6)
print(round(41,666666666666664))
-- OUTPUT:
41.666666666666664
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:25:10) 
-- CODE:
print(250/6)
print(round(41,666666666666664))
-- OUTPUT:
41.666666666666664
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:25:11) 
-- CODE:
print(250/6)
print(round(41,666666666666664))
-- EXECUTION TIME:
0.112022
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:25:16) 
-- CODE:
print(250/6)
print(round(41,666666666666664))
-- OUTPUT:
41.666666666666664
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:25:47) 
-- CODE:
print(250/6)
print(round(41.666666666666664))
-- OUTPUT:
41.666666666666664
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:26:03) 
-- CODE:
print(250/6)
print(round(41.666666666666664))
-- EXECUTION TIME:
0.213122
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:26:16) 
-- CODE:
print(250/6)
round(41.666666666666664)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:26:24) 
-- CODE:
print(250/6)
round(41.666666666666664)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:26:31) 
-- CODE:
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:27:37) 
-- CODE:
print(250/6)
round(41.666666666666664)
print(round)
-- OUTPUT:
41.666666666666664
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:27:49) 
-- CODE:
print(250/6)
round(41.666666666666664)
print(round(41.666666666666664))
-- OUTPUT:
41.666666666666664
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:27:54) 
-- CODE:
print(250/6)
round(41.666666666666664)
print(round(41.666666666666664))
-- EXECUTION TIME:
0.137324
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:28:26) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:28:46) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- EXECUTION TIME:
0.211735
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:28:49) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:28:52) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- EXECUTION TIME:
0.129635
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:29:00) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:29:03) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- EXECUTION TIME:
0.146698
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:29:21) 
-- CODE:
print(250/6)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:29:23) 
-- CODE:
print(250/6)
print(round(41.666666666666664,2))
-- EXECUTION TIME:
0.20868
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:30:30) 
-- CODE:
print(250/6)
round(41.66,2)
print(round(41.66,2))
-- OUTPUT:
41.666666666666664
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:30:33) 
-- CODE:
print(250/6)
round(41.66,2)
print(round(41.66,2))
-- EXECUTION TIME:
0.122777
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:31:05) 
-- CODE:
print(250/6)
round(41.66,2)
print(round(41.66,2))
-- OUTPUT:
41.666666666666664
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:31:59) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:32:06) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- EXECUTION TIME:
0.228055
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:32:35) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:32:53) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:33:19) 
-- CODE:
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:34:35) 
-- CODE:
print(250/6)
round(41.666666666666664,4)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:35:11) 
-- CODE:
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:36:08) 
-- CODE:
print(250/6)
round(41.666666666666664,4)
print(round(41.666666666666664,4))
-- OUTPUT:
41.666666666666664
41.6667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:36:22) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:36:35) 
-- CODE:
print(250/6)
round(41.666666666666664,n)
print(round(41.666666666666664,n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    round(41.666666666666664,n)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:36:46) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:36:49) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- EXECUTION TIME:
0.251414
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:36:53) 
-- CODE:
print(250/6)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:38:17) 
-- CODE:
print(250/6)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:38:19) 
-- CODE:
print(250/6)
print(round(41.666666666666664,2))
-- EXECUTION TIME:
0.207985
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:38:39) 
-- CODE:
print(250.0/6)
print(round(41.666666666666664,2))
-- EXECUTION TIME:
0.148688
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:38:40) 
-- CODE:
print(250.0/6)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:38:42) 
-- CODE:
print(250.0/6)
print(round(41.666666666666664,2))
-- EXECUTION TIME:
0.163549
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:39:05) 
-- CODE:
print(250.0/6.0)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:39:29) 
-- CODE:
print(250.0/6.0)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:39:32) 
-- CODE:
print(250.0/6.0)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- EXECUTION TIME:
0.179195
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:40:05) 
-- CODE:
print(250.0/6.0)
round(41.666666666666664,2)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:41:06) 
-- CODE:
print(250.0/6.0)
round(41.66,2)
print(round(41.66,2))
-- OUTPUT:
41.666666666666664
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:41:15) 
-- CODE:
print(250.0/6.0)
round(41.66,2)
print(round(41.66,2))
-- EXECUTION TIME:
0.106618
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:41:19) 
-- CODE:
print(250.0/6.0)
round(41.66,2)
print(round(41.66,2))
-- OUTPUT:
41.666666666666664
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:41:36) 
-- CODE:
print(250.0/6.0)
round(41.66,2)
print(round)
-- OUTPUT:
41.666666666666664
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:41:36) 
-- CODE:
print(250.0/6.0)
round(41.66,2)
print(round)
-- OUTPUT:
41.666666666666664
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:41:39) 
-- CODE:
print(250.0/6.0)
round(41.66,2)
print(round)
-- OUTPUT:
41.666666666666664
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:41:42) 
-- CODE:
print(250.0/6.0)
round(41.66,2)
print(round)
-- OUTPUT:
41.666666666666664
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:42:19) 
-- CODE:
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:43:00) 
-- CODE:
print(250/6)
round(41.666666666666664,1)
print(round(41.666666666666664,1))
-- OUTPUT:
41.666666666666664
41.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:43:06) 
-- CODE:
print(250/6)
round(41.666666666666664,1)
print(round(41.666666666666664,1))
-- EXECUTION TIME:
0.223276
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:43:20) 
-- CODE:
print(250/6)
round(41.666666666666664,1)
print(round(41.666666666666664,1))
-- OUTPUT:
41.666666666666664
41.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:43:43) 
-- CODE:
print(250/6)
round(41.666666666666664,0)
print(round(41.666666666666664,0))
-- OUTPUT:
41.666666666666664
42.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:43:47) 
-- CODE:
print(250/6)
round(41.666666666666664,0)
print(round(41.666666666666664,0))
-- EXECUTION TIME:
0.170341
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
42.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:44:27) 
-- CODE:
print(250/6)

print(round(41.666666666666664,0))
-- OUTPUT:
41.666666666666664
42.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:44:34) 
-- CODE:
print(250/6)
print(round(41.666666666666664,0))
-- EXECUTION TIME:
0.11979
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
42.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:44:35) 
-- CODE:
print(250/6)
print(round(41.666666666666664,0))
-- OUTPUT:
41.666666666666664
42.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:45:07) 
-- CODE:
print(250/6)
print("round(41.666666666666664,0)")
-- OUTPUT:
41.666666666666664
round(41.666666666666664,0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:45:20) 
-- CODE:
print(250/6)
print(round(41.666666666666664,0))
-- OUTPUT:
41.666666666666664
42.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:45:35) 
-- CODE:
print(250/6)
print(round(41.666666666666664,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:45:38) 
-- CODE:
print(250/6)
print(round(41.666666666666664,2))
-- EXECUTION TIME:
0.16513
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 09:59:43) 
-- CODE:
print(250/6)
print(round(250/6,2))
-- OUTPUT:
41.666666666666664
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 09:59:45) 
-- CODE:
print(250/6)
print(round(250/6,2))
-- EXECUTION TIME:
0.221253
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
41.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 09:59:55) 
-- CODE:
print(round(250/6,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 09:59:57) 
-- CODE:
print(round(250/6,2))
-- EXECUTION TIME:
0.171446
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
